--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Inter:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
+    <!-- Removed 'Inter' font and kept 'Chewy' and 'Pacifico' -->
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Pacifico&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Inter', sans-serif;
+            /* Changed font-family to Verdana for readability */
+            font-family: 'Verdana', sans-serif;
             transition: background 0.5s ease-in-out;
         }
         h1, h2, h3 {
@@ -187,7 +189,13 @@
                     const mimeType = part?.inlineData?.mimeType;
 
                     if (audioData && mimeType && mimeType.startsWith("audio/")) {
-                        const sampleRate = parseInt(mimeType.match(/rate=(\d+)/)[1], 10);
+                        // **FIX:** Added robust parsing for sample rate
+                        const rateMatch = mimeType.match(/rate=(\d+)/);
+                        if (!rateMatch || !rateMatch[1]) {
+                            throw new Error(`Could not parse sample rate from mimeType: ${mimeType}`);
+                        }
+                        const sampleRate = parseInt(rateMatch[1], 10);
+                        
                         const pcmData = base64ToArrayBuffer(audioData);
                         const pcm16 = new Int16Array(pcmData);
                         const wavBlob = pcmToWav(pcm16, sampleRate);
@@ -278,4 +286,3 @@
     </script>
 </body>
 </html>
-
