--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
         /* Full-screen mode adjustment */
         .is-fullscreen {
-            /* Override background for a more immersive feel in fullscreen */
-            background-image: none !important;
-            background-color: #f8fafc !important; /* White/Off-white background */
+            /* Now retains the striped background from the body, only enforcing centering and removing padding. */
             display: flex; /* Ensure content remains centered */
             align-items: center;
             justify-content: center;
