--- a/index.html
+++ b/index.html
@@ -290,8 +290,9 @@
                         Get ready, because this year is going to be epic! We're talking riddles that will tickle your brain and puzzles so tricky you'll need all your brainpower.
                     </p>
                     
+                    <!-- UPDATED PARAGRAPH ABOUT LEON -->
                     <p class="mb-6 bg-yellow-50 p-4 rounded-xl border-2 border-yellow-200">
-                        And speaking of brainpower... I see a new recruit! <span class="font-bold text-blue-600 text-3xl festive-font">Welcome, Leon!</span> I hope you're ready for a challenge, because my games are legendary!
+                        And speaking of brainpower... Wait a minute! Where's <span class="font-bold text-blue-600 text-3xl festive-font">Leon</span>? It's the first day of Brownie's Return, and he's already missed it! I'll have to leave a special, extra tricky puzzle just for him tomorrow.
                     </p>
 
                     <p class="mb-8">
